[package]
name = "art"
licence = "MIT"
description = "A fun example crate. Do not use for production obviously."
version = "0.1.0"
authors = ["Tom McGurl <tom.mcgurl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
